--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,11 +14,29 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <link rel="stylesheet" href="/static/css/normalize.css">
+        <link rel="stylesheet" href="/static/css/main.css">
+        <script src="/static/js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
+        <div class="navbar">
+        {% if current_user.is_authenticated() %}
+            <span>Welcome ^{{ current_user.user_id }}</span>
+            <ul>
+                <li><a href="/">Home</a>
+                <li><a href="/post">New Post</a>
+                <li><a href="/logout">Logout</a>
+            </ul>
+        {% else %}
+            <span>Welcome to murmur</span>
+            <ul>
+                <li><a href="/">Home</a>
+                <li><a href="/register">Register</a>
+                <li><a href="/login">Login</a>
+            </ul>
+        {% endif %}
+        </div>
+
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -35,9 +53,9 @@
         {% block content %}{% endblock %}
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script>window.jQuery || document.write('<script src="/static/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="/static/js/plugins.js"></script>
+        <script src="/static/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
