--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<strong>This is murmur</strong>
+<div id="ip_location">View posts near your IP</div>
+<div id="geo_location">View posts near your device location</div>
 {% endblock %}
