--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,4 +2,27 @@
 {% block content %}
 <div id="ip_location">View posts near your IP</div>
 <div id="geo_location">View posts near your device location</div>
+<br>
+<div>
+    <h1>Add a new post</h1>
+    <form>
+        <div>
+            <label for="title">Title:</label>
+            <input type="text" id="title" />
+        </div>
+        <div>
+            <label for="content">Content:</label>
+            <textarea id="content"></textarea>
+        </div>
+        <div class="button">
+            <button type="button" id="add_post">Add post</button>
+        </div>
+    </form>
+</div>
+<br>
+<div id="post">
+    <h1></h1>
+    <h2></h2>
+    <article></article>
+</div>
 {% endblock %}
