--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,45 +1,69 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        {% if title %}
-        <title>{{title}} - murmur</title>
-        {% else %}
-        <title>murmur</title>
-        {% endif %}
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    {% if title %}
+    <title>{{title}} - murmur</title>
+    {% else %}
+    <title>murmur</title>
+    {% endif %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="/static/css/normalize.css">
-        <link rel="stylesheet" href="/static/css/main.css">
-        <script src="/static/js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-        <div class="navbar">
-        {% if current_user.is_authenticated() %}
-            <span>Welcome ^{{ current_user.user_id }}</span>
-            <ul>
-                <li><a href="/">Home</a>
-                <li><a href="/logout">Logout</a>
-            </ul>
-        {% else %}
-            <span>Welcome to murmur</span>
-            <ul>
-                <li><a href="/">Home</a>
-                <li><a href="/register">Register</a>
-                <li><a href="/login">Login</a>
-            </ul>
-        {% endif %}
+    <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap3-wysihtml5.css" rel="stylesheet">
+    <link href="/static/css/flat-ui.css" rel="stylesheet">
+    <link href="/static/css/main.css" rel="stylesheet">
+    <script src="/static/js/modernizr-2.6.2.min.js"></script>
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
+                <span class="sr-only">Toggle navigation</span>
+            </button>
+            <a class="navbar-brand" href="/">murmur</a>
         </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse-01">
+            {% if current_user.is_authenticated() %}
+            <ul class="nav navbar-nav">
+                <li{% if request.path=="/" %} class="active"{% endif %}><a href="/">Read a story</a></li>
+                <li{% if request.path=="/share" %} class="active"{% endif %}><a href="/share">Share a story</a></li>
+                <li><a href="/clear">Clear</a></li>
+            </ul>
+            <ul class="nav navbar-right">
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+            {% else %}
+            <ul class="nav navbar-nav">
+                <li><a href="/register">Register</a></li>
+            </ul>
+            <span class="navbar-right">
+                <form class="navbar-form form-inline" action="/login" role="login" method="POST">
+                    {{ form.hidden_tag() }}
+                    <div class="form-group">
+                        {{form.email(size=20, class="form-control", placeholder="Email", type="email")}}
+                    </div>
+                    <div class="form-group">
+                        {{form.password(size=20, class="form-control", placeholder="Password", type="password")}}
+                    </div>
+                    <button type="submit" class="btn btn-default">Sign in</button>
+                </form>
+            </span>
+            {% endif %}
+        </div><!-- /.navbar-collapse -->
+    </nav><!-- /navbar -->
 
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    {% block header %}{% endblock %}
 
+    <div class="messages">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
@@ -49,21 +73,46 @@
         </ul>
         {% endif %}
         {% endwith %}
-        {% block content %}{% endblock %}
+    </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="/static/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="/static/js/plugins.js"></script>
-        <script src="/static/js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
-    </body>
+    <!--[if lt IE 7]>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+
+    {% block content %}{% endblock %}
+
+    <!-- FOOTER -->
+    <footer id="f">
+        <div class="container">
+            <div class="row centered">
+                Made in Perth, Australia by <a href="http://www.jonathongrigg.com">Jonathon Grigg</a>
+                <p>Copyright © 2014</p>
+            </div><!-- row -->
+        </div><!-- container -->
+    </footer><!-- Footer -->
+
+    <!-- Load JS here for greater good =============================-->
+    <script src="/static/js/jquery-1.8.3.min.js"></script>
+    <script src="/static/js/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="/static/js/jquery.ui.touch-punch.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap-select.js"></script>
+    <script src="/static/js/bootstrap-switch.js"></script>
+    <script src="/static/js/flatui-checkbox.js"></script>
+    <script src="/static/js/flatui-radio.js"></script>
+    <script src="/static/js/jquery.tagsinput.js"></script>
+    <script src="/static/js/jquery.placeholder.js"></script>
+    <script src="/static/js/bootstrap3-wysihtml5.all.min.js"></script>
+    <script src="/static/js/main.js"></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-XXXXX-X');ga('send','pageview');
+    </script>
+</body>
 </html>
