--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row centered">
                 Made in Perth, Australia by <a href="http://www.jonathongrigg.com">Jonathon Grigg</a>
-                <p>Copyright © 2014</p>
+                <p>Copyright © 2014 murmur</p>
             </div><!-- row -->
         </div><!-- container -->
     </footer><!-- Footer -->
