--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -15,6 +15,13 @@
     height: 20em;
 }
 
+.darken {
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 100%;
+    min-height: 450px;
+    width: 100%;
+}
+
 /* OVERALL ASPECT */
 
 body {
@@ -139,7 +146,6 @@ a:after {
    ========================================================================== */
 
 #headerwrap {
-    background: url('/static/images/cover.jpg') no-repeat center top;
     margin-top: -10px;
     padding-top:20px;
     text-align:center;
@@ -233,13 +239,12 @@ a:after {
     color: white;
 }
 
-
-
 /* Footer Wrap */
 #f {
+    padding-top: 20px;
     background: #2d2d2d;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 #f i {
