Redesign with a light theme

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,31 +32,33 @@
 {% if current_user.is_authenticated() %}
 <div class="container w">
     <div class="post col-lg-8 col-lg-offset-2">
-        <article><h5 class="centered">Loading...</h5></article>
+        <article>
+            <h3 class="centered"><i class="fa fa-refresh fa-spin"></i><br>Loading...</h5>
+        </article>
     </div>
 
-    <div class="col-lg-8 col-lg-offset-2">
-        <button class="btn btn-primary btn-block" id="view_posts">View another story near you</button>
+    <div class="col-lg-8 col-lg-offset-2 centered">
+        <button class="btn btn-default" id="view_posts">View another story near you</button>
     </div>
 </div>
 {% else %}
 <div class="container w">
     <div class="row centered">
         <br><br>
-        <div class="col-lg-4">
-            <i class="fui-user"></i>
+        <div class="col-sm-4">
+            <i class="glyphicon glyphicon-user"></i>
             <h4>ANONYMOUS</h4>
             <p>There are no usernames, profiles or avatars here on murmur, because sometimes our identity gets in the way of what's important. You are identified only by your unique account number, allowing you to share freely.</p>
         </div><!-- col-lg-4 -->
 
-        <div class="col-lg-4">
-            <i class="fui-heart"></i>
+        <div class="col-sm-4">
+            <i class="glyphicon glyphicon-heart"></i>
             <h4>INTERESTING</h4>
             <p>Share your thoughts buzzing around in your head, discover a stranger's hidden passion for the ukelele, or relive a precious childhood memory. Step into another pair of shoes and you'll soon realise how interesting life really is.</p>
         </div><!-- col-lg-4 -->
 
-        <div class="col-lg-4">
-            <i class="fui-location"></i>
+        <div class="col-sm-4">
+            <i class="glyphicon glyphicon-map-marker"></i>
             <h4>LOCATION BASED</h4>
             <p>Discover interesting stories from people near you right from the start, no following or time consuming friend lists required. See your own town through the eyes of others, and discover the heartbeat you never realised it had.</p>
         </div><!-- col-lg-4 -->
@@ -67,18 +69,18 @@
 <div id="blue">
     <div class="container">
         <div class="row centered">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-md-8 col-md-offset-2">
                 <h4>SIGN UP</b></h4>
                 <form class="form-inline" action="/register" role="register" method="POST">
                     {{ register.hidden_tag() }}
                     <div class="form-group">
-                        {{register.email(size=20, class="flat form-control", placeholder="Email", type="email")}}
+                        {{register.email(size=20, class="form-control", placeholder="Email", type="email")}}
                     </div>
                     <div class="form-group">
-                        {{register.password(size=20, class="flat form-control", placeholder="Password", type="password")}}
+                        {{register.password(size=20, class="form-control", placeholder="Password", type="password")}}
                     </div>
                     <div class="form-group">
-                        {{register.password_confirm(size=20, class="flat form-control", placeholder="Confirm password", type="password")}}
+                        {{register.password_confirm(size=20, class="form-control", placeholder="Confirm password", type="password")}}
                     </div>
                     <button type="submit" class="btn btn-primary">Register</button>
                 </form>
@@ -92,7 +94,7 @@
             <h4>PRICING PLANS</h4>
             <br>
             </div>
-            <div class="col-lg-4 col-lg-offset-2">
+            <div class="col-md-4 col-md-offset-2">
                 <!-- START PRICING TABLE -->
                 <div class="pricing-option">
                     <div class="pricing-top">
@@ -113,7 +115,7 @@
                 <!-- END PRICING TABLE -->
             </div><!-- /col -->
 
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <!-- START PRICING TABLE -->
                 <div class="pricing-option">
                     <div class="pricing-top">
@@ -131,11 +133,11 @@
                         <li><strong>Messaging support</strong></li>
                         <li><strong>A warm fuzzy feeling inside</strong></li>
                     </ul>
-                    <a href="#" class="pricing-signup ">Coming soon</a>
+                    <p class="pricing-disabled">Coming soon</p>
                 </div><!-- /pricing-option -->
                 <!-- END PRICING TABLE -->
             </div><!-- /col -->
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-sm-8 col-sm-offset-2">
                 <h5>WHY?</h5>
                 <p>Running a website isn't free, especially one that deals with large numbers of users. Most social networks cover this cost by trading your personal information with advertisers in the form of targetted advertising, often without your consent. Murmur is different. We do not show ads anywhere on our site as we believe in our users privacy, but this means we need an alternative source of income to keep the site running.</p>
                 <p><em>We realise that not everyone will have the means of purchasing a premium account. However, we believe that the free standard account still retains the essence of what makes murmur special.</em></p>
