--- a/app/templates/share.html
+++ b/app/templates/share.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <div>
-        <h2>Share a new story</h2>
+        <h1>Share a new story</h1>
         <form>
             <div class="form-group">
                 <label for="title">Title:</label>
@@ -13,7 +13,7 @@
                 <textarea id="content" class="form-control"></textarea>
             </div>
             <div class="button form-group">
-                <button type="button" id="add_post" class="btn btn-inverse btn-primary">Share</button>
+                <button type="button" id="add_post" class="btn btn-inverse btn-primary has-spinner">Share</button>
             </div>
         </form>
     </div>
