--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,31 +1,14 @@
-/*
- * Author: Carlos Alvarez
- * URL: http://alvarez.is
- *
- * Project Name: SPOT - Free Bootstrap 3 Theme
- * Version: 1.0
- * URL: http://blacktie.co
- */
-
-/* FONTS */
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,900);
 
-#content {
-    height: 20em;
-}
-
-.darken {
-    background-color: rgba(0, 0, 0, 0.2);
+html,
+body {
     height: 100%;
-    min-height: 450px;
-    width: 100%;
+  /* The html and body elements cannot have any padding or margin. */
 }
-
-/* OVERALL ASPECT */
 
 body {
-  background-color: #f2f2f2;
+    background-color: #ebebeb;
     font-family: "Lato";
     font-weight: 300;
     font-size: 16px;
@@ -34,7 +17,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
 
-    margin-top: 70px;
+    margin-top: 64px;
 }
 
 /* Titles */
@@ -44,110 +27,62 @@ h1, h2, h3, h4, h5, h6 {
     color: #333;
 }
 
-
 /* Paragraph & Typographic */
 p {
     line-height: 28px;
-    margin-bottom: 25px;
+    /*margin-bottom: 25px;*/
 }
 
 .centered {
     text-align: center;
 }
 
-/* Links */
-a {
-    color: #f85c37;
-    word-wrap: break-word;
-
-    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
-    transition: color 0.1s ease-in, background 0.1s ease-in;
+#view_posts {
+    margin-bottom: 20px;
 }
 
-a:hover,
-a:focus {
-    color: #7b7b7b;
-    text-decoration: none;
-    outline: 0;
+/* Wrapper for page content to push down footer */
+#wrap {
+    height: auto;
+    min-height: 100%;
+    /* Pad bottom by footer height */
+    padding: 0 0 60px;
+    /* Negative indent footer by its height */
+    margin: 0 auto -60px;
 }
 
-a:before,
-a:after {
-    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
-    transition: color 0.1s ease-in, background 0.1s ease-in;
+.post {
+    padding: 20px;
 }
-
- hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
 
 .navbar {
     font-weight: 800;
     font-size: 14px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-left: 40px;
     padding-right: 40px;
 }
 
-.navbar-inverse {
-    background: #2d2d2d;
-    border-color: #2d2d2d;
+.navbar-masthead.navbar-default {
+    /*background: #152740;*/
+    /*border-color: #333;*/
 }
 
-.navbar-inverse .navbar-nav > .active > a {
-    background: #ff7878
+.navbar-masthead.navbar-default .navbar-nav > .active > a {
+    background: #e0e0e0;
+    height: 100%;
 }
 
-.navbar-inverse .navbar-brand {
-    color: #999999;
+.navbar-masthead.navbar-default .navbar-brand {
+    color: #ff7878;
     font-weight: bolder;
     font-size: 22px;
     letter-spacing: 1px;
 }
 
-.navbar-inverse .navbar-brand i {
-    color: #ff7878;
-    font-size: 22px;
-    letter-spacing: 1px;
-}
-
-/*TILT*/
-.tilt {
-  -webkit-transition: all 0.5s ease;
-     -moz-transition: all 0.5s ease;
-       -o-transition: all 0.5s ease;
-      -ms-transition: all 0.5s ease;
-          transition: all 0.5s ease;
-}
-
-.tilt:hover {
-  -webkit-transform: rotate(-10deg);
-     -moz-transform: rotate(-10deg);
-       -o-transform: rotate(-10deg);
-      -ms-transform: rotate(-10deg);
-          transform: rotate(-10deg);
-}
-
-/* ==========================================================================
-   Wrap Sections
-   ========================================================================== */
-
 #headerwrap {
     margin-top: -10px;
-    padding-top:20px;
     text-align:center;
     background-attachment: relative;
     background-position: center center;
@@ -179,6 +114,43 @@ a:after {
     font-weight: 700;
     letter-spacing: 2px;
     text-transform: uppercase;
+}
+
+#content {
+    height: 20em;
+}
+
+.darken {
+    background-color: rgba(40, 58, 75, 0.5);
+    height: 100%;
+    min-height: 450px;
+    width: 100%;
+}
+
+/* Set the fixed height of the footer here */
+footer {
+    height: 60px;
+    background: #2d2d2d;
+    padding-top: 8px;
+}
+
+footer p {
+    color: #ebebeb;
+    margin-bottom: 0px;
+    line-height: 22px;
+}
+
+.w {
+    padding-top: 35px;
+}
+
+.w h4 {
+    font-weight: 700;
+}
+
+.w i {
+    color: #ff7878;
+    font-size: 30px;
 }
 
 /* Dark Grey Wrap */
@@ -225,7 +197,7 @@ a:after {
 /* Blue Wrap */
 
 #blue {
-    background: #3498db;
+    background: #152740;
     padding-top: 35px;
     padding-bottom: 35px;
 }
@@ -239,89 +211,39 @@ a:after {
     color: white;
 }
 
-/* Footer Wrap */
-#f {
-    padding-top: 20px;
-    background: #2d2d2d;
-    padding-top: 20px;
-    padding-bottom: 20px;
+/* Links */
+a {
+    color: #f85c37;
+    word-wrap: break-word;
+
+    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+    transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
-#f i {
-    color: #bdbdbd;
-    font-size: 30px;
-    padding: 20px;
+a:hover,
+a:focus {
+    color: #7b7b7b;
+    text-decoration: none;
+    outline: 0;
 }
 
-#f i:hover {
-    color: #ff7878;
+a:before,
+a:after {
+    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+    transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
-/****** SECTIONS *****/
-
-.w {
-    padding-top: 35px;
-}
-
-.w h4 {
-    font-weight: 700;
-}
-
-.w i {
-    color: #ff7878;
-    font-size: 30px;
-}
-
-
-.wb {
-    padding-top: 35px;
-    margin-bottom: 0px;
-}
-
-.wb h4 {
-    font-weight: 700;
-}
-
-.desc {
-    padding-top: 35px;
-}
-
-.desc h4 {
-    font-weight: 700;
-}
-
-.desc i {
-    color: #ff7878;
-    font-size: 12px;
-    padding: 5px;
-}
-
-/***** MODAL CONTACT *****/
-.modal-content {
-    border-radius: 0px;
-
-}
-
-.modal-header {
-    background: #bdbdbd;
-    color: white;
-}
-
-.modal-header h4 {
-    font-weight: 700;
-}
-
-.modal-body {
-    background: #f2f2f2;
-    font-family: "Lato";
+.navbar-form input {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     font-weight: 300;
-    font-size: 16px;
-    color: #555;
-}
-
-.modal-footer {
-    background: #f2f2f2;
-    margin-top: 0px;
 }
 
 /* ==========================================================================
@@ -402,8 +324,8 @@ a:after {
 
 .pricing-option ul li {
     border-bottom: solid 1px #e1e1e1;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .pricing-option .pricing-signup {
@@ -413,11 +335,19 @@ a:after {
     font-weight: bold;
     padding: 15px 10px;
     color: white;
-    background: #1abc9c;
-}
-
-.pricing-option .pricing-signup:hover {
     background: #ff7878;
 }
 
+.pricing-option .pricing-disabled {
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 15px 10px;
+    color: white;
+    background: #666;
+}
 
+.pricing-option .pricing-signup:hover {
+    background: #152740;
+}
