--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,99 +10,98 @@
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/todc-bootstrap.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href="/static/css/bootstrap3-wysihtml5.css" rel="stylesheet">
-    <link href="/static/css/flat-ui.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
     <script src="/static/js/modernizr-2.6.2.min.js"></script>
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
+    <!-- <link rel="shortcut icon" href="/static/images/favicon.ico"> -->
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
-                <span class="sr-only">Toggle navigation</span>
-            </button>
-            <a class="navbar-brand" href="/">murmur</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse-01">
-            {% if current_user.is_authenticated() %}
-            <ul class="nav navbar-nav">
-                <li{% if request.path=="/" %} class="active"{% endif %}><a href="/">Read a story</a></li>
-                <li{% if request.path=="/share" %} class="active"{% endif %}><a href="/share">Share a story</a></li>
-                <li><a href="/clear">Clear</a></li>
+    <div id="wrap">
+        <nav class="navbar navbar-masthead navbar-default navbar-fixed-top" role="navigation">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">murmur</a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse-01">
+                {% if current_user.is_authenticated() %}
+                <ul class="nav navbar-nav">
+                    <li{% if request.path=="/" %} class="active"{% endif %}><a href="/">Read a story</a></li>
+                    <li{% if request.path=="/share" %} class="active"{% endif %}><a href="/share">Share a story</a></li>
+                    <li><a href="/clear">Clear</a></li>
+                </ul>
+                <ul class="nav navbar-right">
+                    <li><a href="/logout">Logout</a></li>
+                </ul>
+                {% else %}
+                <ul class="nav navbar-nav">
+                    <li><a href="/register">Register</a></li>
+                </ul>
+                <span class="navbar-right">
+                    <form class="navbar-form form-inline" action="/login" role="login" method="POST">
+                        {{ form.hidden_tag() }}
+                        <div class="form-group">
+                            {{form.email(size=20, class="form-control", placeholder="Email", type="email")}}
+                        </div>
+                        <div class="form-group">
+                            {{form.password(size=20, class="form-control", placeholder="Password", type="password")}}
+                        </div>
+                        <button type="submit" class="btn btn-default">Sign in</button>
+                    </form>
+                </span>
+                {% endif %}
+            </div><!-- /.navbar-collapse -->
+        </nav><!-- /navbar -->
+
+        {% block header %}{% endblock %}
+
+        <div class="messages">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <ul>
+            {% for message in messages %}
+                <li>{{ message }} </li>
+            {% endfor %}
             </ul>
-            <ul class="nav navbar-right">
-                <li><a href="/logout">Logout</a></li>
-            </ul>
-            {% else %}
-            <ul class="nav navbar-nav">
-                <li><a href="/register">Register</a></li>
-            </ul>
-            <span class="navbar-right">
-                <form class="navbar-form form-inline" action="/login" role="login" method="POST">
-                    {{ form.hidden_tag() }}
-                    <div class="form-group">
-                        {{form.email(size=20, class="form-control", placeholder="Email", type="email")}}
-                    </div>
-                    <div class="form-group">
-                        {{form.password(size=20, class="form-control", placeholder="Password", type="password")}}
-                    </div>
-                    <button type="submit" class="btn btn-default">Sign in</button>
-                </form>
-            </span>
             {% endif %}
-        </div><!-- /.navbar-collapse -->
-    </nav><!-- /navbar -->
+            {% endwith %}
+        </div>
 
-    {% block header %}{% endblock %}
 
-    <div class="messages">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-        {% for message in messages %}
-            <li>{{ message }} </li>
-        {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
+        <!--[if lt IE 7]>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        {% block content %}{% endblock %}
     </div>
 
-
-    <!--[if lt IE 7]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    {% block content %}{% endblock %}
-
     <!-- FOOTER -->
-    <footer id="f">
+    <footer>
         <div class="container">
             <div class="row centered">
-                Made in Perth, Australia by <a href="http://www.jonathongrigg.com">Jonathon Grigg</a>
-                <p>Copyright © 2014 murmur</p>
+                <p>Made in Perth, Australia by <a href="http://www.jonathongrigg.com">Jonathon Grigg</a>
+                <br>
+                Copyright © 2014 murmur</p>
             </div><!-- row -->
         </div><!-- container -->
     </footer><!-- Footer -->
 
     <!-- Load JS here for greater good =============================-->
-    <script src="/static/js/jquery-1.8.3.min.js"></script>
-    <script src="/static/js/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="/static/js/jquery.ui.touch-punch.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/bootstrap-select.js"></script>
-    <script src="/static/js/bootstrap-switch.js"></script>
-    <script src="/static/js/flatui-checkbox.js"></script>
-    <script src="/static/js/flatui-radio.js"></script>
-    <script src="/static/js/jquery.tagsinput.js"></script>
-    <script src="/static/js/jquery.placeholder.js"></script>
     <script src="/static/js/bootstrap3-wysihtml5.all.min.js"></script>
     <script src="/static/js/main.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
