Added image chooser to post creation, still needs backend integration

--- a/app/templates/share.html
+++ b/app/templates/share.html
@@ -12,8 +12,13 @@
                 <label for="content">Content:</label>
                 <textarea id="content" class="form-control"></textarea>
             </div>
+            <div class="form-group">
+                <label for="cover">Cover Image:</label><br>
+                <button type="button" id="view_more_cover" class="btn btn-default">View more</button>
+                <select id="cover" class="image-picker"></select>
+            </div>
             <div class="button form-group">
-                <button type="button" id="add_post" class="btn btn-inverse btn-primary has-spinner">Share</button>
+                <button type="button" id="add_post" class="btn btn-primary">Share</button>
             </div>
         </form>
     </div>
