--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -89,15 +89,15 @@ p {
     min-height: 450px;
     width: 100%;
 
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
+    -webkit-background-size: 100% !important;
+    -moz-background-size: 100% !important;
+    -o-background-size: 100% !important;
+    background-size: 100% !important;
 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    -webkit-background-size: cover !important;
+    -moz-background-size: cover !important;
+    -o-background-size: cover !important;
+    background-size: cover !important;
 }
 
 #headerwrap h1 {
@@ -244,6 +244,39 @@ a:after {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     font-weight: 300;
+}
+
+/* Cover image selector */
+ul.thumbnails {
+    width: 100%;
+    height: 250px;
+    white-space: nowrap;
+    overflow-x: auto;
+}
+
+.thumbnails li {
+    max-height: 220px;
+    max-width: 300px;
+    height: auto;
+    width: auto;
+}
+
+.thumbnails li .image_picker_image {
+    height: 208px;
+    width: 288px;
+}
+
+ul.thumbnails li[class*="span"] {
+    display: inline-block;
+    float: none;
+}
+
+ul.thumbnails li[class*="span"]:first-child {
+    margin-left: 0;
+}
+
+#view_more_cover {
+    margin-bottom: 5px;
 }
 
 /* ==========================================================================
