--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
     <link href="/static/css/bootstrap.css" rel="stylesheet">
     <link href="/static/css/todc-bootstrap.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="/static/css/image-picker.css" rel="stylesheet">
     <link href="/static/css/bootstrap3-wysihtml5.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
     <script src="/static/js/modernizr-2.6.2.min.js"></script>
@@ -102,6 +103,7 @@
     <!-- Load JS here for greater good =============================-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/image-picker.js"></script>
     <script src="/static/js/bootstrap3-wysihtml5.all.min.js"></script>
     <script src="/static/js/main.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
