--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
 <div class="container w">
     <div class="post col-lg-8 col-lg-offset-2">
         <article>
-            <h3 class="centered"><i class="fa fa-refresh fa-spin"></i><br>Loading...</h5>
+            <h3 class="centered"><span class="fa fa-refresh fa-spin"></span><br>Loading...</h5>
         </article>
     </div>
 
