Missing curly bracket

--- a/app/templates/stories.html
+++ b/app/templates/stories.html
@@ -7,7 +7,7 @@
         <div class="row list-group-item active">
             <div class="col-xs-10 col-sm-11">
                 <a href="/story/{{ story.id }}">
-                    <h4 class="list-group-item-heading">{{ story.title }</h4>
+                    <h4 class="list-group-item-heading">{{ story.title }}</h4>
                     <p class="list-group-item-text">{{ story.content|striptags|truncate() }}</p>
                 </a>
             </div>
