Add list of posts, viewing of own posts by id and deleting of own posts

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,8 +19,18 @@
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-8 col-lg-offset-2 post">
-                <h1></h1>
-                <h2></h2>
+                    <h1></h1>
+                    <h3></h3>
+                    <br>
+                    <div class="btn-group" style="display: none;">
+                        <button id="support" type="button" class="btn btn-default">
+                            <span class="glyphicon glyphicon-heart-empty"></span>
+                            <span class="support"></span>
+                        </button>
+                        <button id="spam" type="button" class="btn btn-default">
+                            Report as spam
+                        </button>
+                    </div>
                 </div>
             </div><!-- row -->
         </div><!-- container -->
