--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -115,6 +115,27 @@ p {
     text-transform: uppercase;
 }
 
+#headerwrap h3 {
+    color: white;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+#headerwrap span {
+    color: white;
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
+#headerwrap .btn-default {
+    color: #fff;
+    background-color: rgba(243, 243, 243, 0);
+    background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0) 0%, rgba(241, 241, 241, 0) 100%);
+    text-shadow: none;
+
+}
+
 #content {
     height: 20em;
 }
