--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -112,6 +112,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/image-picker.js"></script>
+    <script src="/static/js/moment.min.js"></script>
     <script src="/static/js/bootstrap3-wysihtml5.all.min.js"></script>
     <script src="/static/js/main.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
