Fix HTML not being displayed correctly in solo post view

--- a/app/templates/story.html
+++ b/app/templates/story.html
@@ -30,7 +30,7 @@
 <div class="container w">
     <div class="post col-lg-8 col-lg-offset-2">
         <article>
-            {{ post.content }}
+            {{ post.content|safe }}
         </article>
     </div>
 </div>
